@@ -21,6 +21,9 @@ sqlpass=ChickenLittlewasright
 # SQL Database
 sqldb=xevres
 
+# Launch into background? 0=yes 1=no
+stayhere=0
+
 # Warn about Mirkforce if a subnet exceeds this many connections.
 # Note that this setting obsoletes the old "clonewarn" setting, as a single
 # IPv4 host is basically the same as a /32 subnet...
