@@ -1,3 +1,10 @@
+Sun Sep 26 01:26:39 CEST 2004	Wiedi	<wiedi@elbone.net>
+	* Started reimplementing the channel modul in a much cleaner, faster an less memory 
+					consuming way after i got inspired by the source of
+					lightweigh and mostly multiserv. I now have a exact
+					plan how to implement the channel forward management.
+					If this module is done it will realy rock :)
+
 Fri Sep  3 02:25:58 CEST 2004	Wiedi	<wiedi@elbone.net>
 	* Fixed new module functions
 	* Finshed Connect4 module
